Update README file features.